# codewars

./: .editorconfig  .gitignore  README.md  pyproject.toml
incolumepy/codewars/: Help_the_general_decode_secret_enemy_messages.py  Last_digit_of_a_huge_number.py  Product_of_consecutive_Fib_numbers.py  String_incrementer.py  The_boolean_order.py  decode_the_morese_code_for_real.py  firstnotrepeatcharacter.py  getpin.py  int32toIPv4.py  kata5_string_incrementer.py  kyu4_Range_Extraction.py  kyu5_rot13.py  last_digit_of_a_huge_number.py  number_of_integer_partitions.py  permutations.py
tests/: TestBase.py  test_Help_the_general_decode_secret_enemy_messages.py  test_Last_digit_of_a_huge_number.py  test_Product_of_consegutive_Fib_numbers.py  test_String_incrementer.py  test_The_boolean_order.py  test_decode_the_morse_code_for_real.py  test_firstnotrepeatcharacter.py  test_getpin.py  test_int32 to IPv4.py  test_kyu4_Range_Extraction.py  test_kyu5_rot13.py  test_last_digit_of_a_huge_number.py  test_number_of_integer_partitions.py  test_permutations.py  tests-kata5-string-incrementer.py
