[tool.poetry]
name = "incolumepy.codewars"
version = "0.1.1-alpha.1"
description = "Code wars codes"
authors = ["britodfbr <britodfbr@gmail.com>"]
packages = [
    { include = "incolumepy" },
]
[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
