[tool.poetry]
name = "incolumepy.codewars"
version = "0.1.1-alpha.3"
description = "Code wars implementation"
authors = ["britodfbr <britodfbr@gmail.com>"]
packages = [
    { include = "incolumepy" },
]

readme = "README.md"

homepage = "https://github.com/incolumepy/codewars"

repository = "git@github.com:incolumepy/codewars.git"

keywords = ["codewars", ""]

classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Topic :: Education",
    "License :: OSI Approved :: MIT License",
    "Environment :: Console",
]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
